# ChordsApp

./: .gitignore  components.json  index.html  package.json  readme.md  scripting.md  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish-tauri.yaml
data/: builtin-modules.json  quickjs-require.jinja.js
data/chords/macos/: chords.toml
data/chords/macos/com/apple/finder/: chords.toml
src/: App.tsx  global.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/bundle/js/@llrt/test/: index.js  worker.js
src-tauri/bundle/js/__tests__/unit/: assert.test.js  async_hooks.test.js  asynchronous-processing-discipline.test.js  buffer.test.js  child_process.test.js  clone.test.js  compile.test.js  console.test.js  crypto.subtle.test.js  crypto.test.js  date.test.js  dgram.test.js  dns.test.js  encoding.test.js  events.test.js  exceptions.test.js  executable.test.js  fetch.formdata.test.js  fetch.headers.test.js  fetch.request.test.js  fetch.response.test.js  fetch.test.js  fs.test.js  import.test.js  intl.test.js  jest-expect.test.js  json.test.js  llrt.qjs.test.js  llrt.xml.test.js  module.test.js  navigator.test.js  net.test.js  numbers.test.js  os.test.js  path.test.js  perf_hooks.test.js  performance.test.js  process.test.js  require.test.js  socket.test.js  (+15 more)
src-tauri/capabilities/: overlay.json  settings.json
src-tauri/crates/frontmost/: Cargo.toml
src-tauri/crates/frontmost/src/: app.rs  frontmost.rs  lib.rs
src-tauri/crates/llrt_net/: Cargo.toml
src-tauri/crates/llrt_net/src/: server.rs
src-tauri/crates/llrt_readline/: Cargo.toml
src-tauri/crates/llrt_readline/src/: lib.rs
src-tauri/crates/rdev/src/: lib.rs  rdev.rs
src-tauri/crates/rdev/src/linux/wayland/: grab.rs  listen.rs
src-tauri/crates/rdev/src/linux/x11/: common.rs  grab.rs
src-tauri/crates/rdev/src/macos/: common.rs  grab.rs  simulate.rs
src-tauri/crates/rdev/src/windows/: listen.rs
src-tauri/native/: caps.c  hid.c
src-tauri/patches/: llrt_core+0.8.1-beta.patch
src-tauri/src/: constants.rs  git.rs  lib.rs  main.rs  mode.rs  sources.rs
src-tauri/src/chords/: chord.rs  chord_file.rs  chord_folder.rs  lua_runtime.rs  mod.rs  runtime.rs  shortcut.rs
src-tauri/src/feature/: chorder.rs  chorder_panel.rs  clicker.rs  clicker_panel.rs  clicker_setup.rs  mod.rs
src-tauri/src/input/: caps.rs  handler.rs  key.rs  key_event.rs  mod.rs
src-tauri/src/tauri_app/: app_lifecycle.rs  commands.rs  context.rs  deno.rs  deno_resolver.rs  js.rs  js_chordsapp.rs  mod.rs  settings.rs  setup.rs  store.rs  tray.rs
src/components/: indicator.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  hover-card.tsx  input-group.tsx  input-otp.tsx  input.tsx  item.tsx  kbd.tsx  label.tsx  menubar.tsx  native-select.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  (+11 more)
src/windows/: settings.tsx
