[package]
name = "chords"
version = "0.1.0"
description = "shortcuts reimagined"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chords_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-user-input = "0.1.1"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-log = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1", version = "2.1.0" }
log = "*"
rdev = { version = "0.6", features = ["unstable_grab"] }
observable-property = "0.4.2"
toml = "1.0.6"
anyhow = "1.0"
libc = "0.2"
bitflags = "2.11"
arc-swap = "1.8"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
keycode = "1"
include_dir = { version = "0.7", features = ["glob"] }
device_query = "4"
bijective-enum-map = "0.1.0"
walkdir = "2.5.0"
gix = {  version = "0.80.0", features = ["blocking-http-transport-reqwest-rust-tls"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
rquickjs = {  version = "0.11.0", features = ["full-async"] }
mac-keycode = "0.0.2"
fast_radix_trie = "1.1.0"
llrt_modules = { git = "https://github.com/awslabs/llrt", package = "llrt_modules", features = [
    "path",
    "fs",
    "os",
    "util",
    "child-process",
    "process",
    "console",
    "buffer",
    # Currently broken by a missing trait impl
    # "crypto",
] }
rquickjs-serde = "0.5.0"
tauri-plugin-store = "2"
jsonc-parser = "0.31.0"
minijinja = "2.18.0"
include_json = "*"

# Deno makes input methods super laggy for some reason, might debug in future, but not worth right now
#deno_runtime = {  version = "0.248.0", features = ["transpile"] }
#deno_resolver = "0.71.0"
#sys_traits = "*"
#deno_ast = "0.53.1"


[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"
macos-accessibility-client = "0.0.2"
frontmost = "1.1.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"

[patch.crates-io]
rdev = { path = "./crates/rdev" }
frontmost = { path = "./crates/frontmost" }
